# litestar-tailwind-cli

./: .pre-commit-config.yaml  README.md  justfile  pyproject.toml
example/: app.py
example/templates/: index.html.j2
src/litestar_tailwind_cli/: __init__.py  cli.py  download.py  utils.py
