[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "litestar-tailwind-cli"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Tobi DEGNON", email = "tobidegnon@proton.me" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/Tobi DEGNON/litestar-tailwind-cli#readme"
Issues = "https://github.com/Tobi DEGNON/litestar-tailwind-cli/issues"
Source = "https://github.com/Tobi DEGNON/litestar-tailwind-cli"

[tool.hatch.version]
path = "src/litestar_tailwind_cli/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/litestar_tailwind_cli tests}"

[tool.coverage.run]
source_pkgs = ["litestar_tailwind_cli", "tests"]
branch = true
parallel = true
omit = [
  "src/litestar_tailwind_cli/__about__.py",
]

[tool.coverage.paths]
litestar_tailwind_cli = ["src/litestar_tailwind_cli", "*/litestar-tailwind-cli/src/litestar_tailwind_cli"]
tests = ["tests", "*/litestar-tailwind-cli/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
